packages/typ/tests/fixtures/diagnostics/0258_fun_polymorphic_record_field_mismatch_02.ml
type poly_beta = { run_beta : 'a. 'a -> 'a }
let bad_beta : poly_beta = { run_beta = fun _ -> 1 }
